--- a/src/app/modules/auth/pages/login/login.component.html
+++ b/src/app/modules/auth/pages/login/login.component.html
@@ -1,1 +1,26 @@
-<p>login works!</p>
+<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+  <mat-grid-list cols="1" rowHeight="80px">
+    <mat-grid-tile
+      ><mat-form-field>
+        <mat-label>Email</mat-label>
+        <input matInput formControlName="email" /> </mat-form-field
+    ></mat-grid-tile>
+    <mat-grid-tile>
+      <mat-form-field>
+        <mat-label>Password</mat-label>
+        <input matInput type="password" formControlName="password" />
+      </mat-form-field>
+    </mat-grid-tile>
+    <mat-grid-tile
+      ><button mat-raised-button type="submit">Login</button></mat-grid-tile
+    >
+    <mat-grid-tile>
+      <p>
+        Aún no tienes una cuenta, puedes crear una
+        <button mat-button color="primary" routerLink="/auth/register">
+          aquí
+        </button>
+      </p>
+    </mat-grid-tile>
+  </mat-grid-list>
+</form>
