--- a/src/app/modules/auth/pages/register/register.component.html
+++ b/src/app/modules/auth/pages/register/register.component.html
@@ -1,22 +1,36 @@
-<form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-  <mat-grid-list cols="1" rowHeight="100%">
-    <mat-grid-tile>
-      <mat-form-field>
+<mat-card class="register-form">
+  <mat-card-header>
+    <mat-card-title>Registrar</mat-card-title>
+    <mat-card-subtitle>Registra tu usuario</mat-card-subtitle>
+  </mat-card-header>
+  <mat-card-content>
+    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+      <mat-form-field class="form-field-register">
+        <mat-label>Foto de perfil</mat-label>
+        <input
+          matInput
+          placeholder="foto de perfil"
+          formControlName="profileImageUrl" />
+      </mat-form-field>
+      <mat-form-field class="form-field-register">
+        <mat-label>UserName</mat-label>
+        <input
+          matInput
+          placeholder="nombre de usuario"
+          formControlName="username" />
+      </mat-form-field>
+      <mat-form-field class="form-field-register">
         <mat-label>Correo electronico</mat-label>
         <input
           matInput
           placeholder="Ingresa tu correo"
           formControlName="email" />
       </mat-form-field>
-    </mat-grid-tile>
-    <mat-grid-tile>
-      <mat-form-field>
+      <mat-form-field class="form-field-register">
         <mat-label>Password</mat-label>
         <input matInput type="password" formControlName="password" />
       </mat-form-field>
-    </mat-grid-tile>
-    <mat-grid-tile>
-      <mat-form-field>
+      <mat-form-field class="form-field-register">
         <mat-label>Fecha de nacimiento</mat-label>
         <input matInput [matDatepicker]="picker" formControlName="birthDate" />
         <mat-hint>MM/DD/YYYY</mat-hint>
@@ -25,9 +39,9 @@
           [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
       </mat-form-field>
-    </mat-grid-tile>
-    <mat-grid-tile>
-      <button mat-raised-button type="submit">Registrar</button>
-    </mat-grid-tile>
-  </mat-grid-list>
-</form>
+      <mat-card-actions>
+        <button mat-raised-button type="submit">Registrar</button>
+      </mat-card-actions>
+    </form>
+  </mat-card-content>
+</mat-card>
